compiler-core/src/javascript/tests/snapshots/rakun_core__javascript__tests__custom_types__zero_arity_imported_unqualified_typescript.snap
---
source: compiler-core/src/javascript/tests/custom_types.rs
assertion_line: 71
expression: "import other.{Two}\npub fn main() {\n  Two\n}"
---
----- SOURCE CODE
import other.{Two}
pub fn main() {
  Two
}

----- TYPESCRIPT DEFINITIONS
import type * as $other from "../other.d.mts";

export function main(): $other.One$;
